www/stylus/objects/section.footer_objects.styl
.footer
  position: relative
  &__follow-me
    min-height 18.8rem
    &__container
      display flex
      justify-content center
      flex-direction column
      width 20rem
      margin 0 auto
      padding 0 1.5 5rem 1.5rem

.icons
  margin 0 auto 2rem auto
  &__container
      width 10rem
      height: 10rem
      position: relative
      display table-cell
      vertical-align: middle;
      &__icon
        position: absolute
        top: 50%
        transform translateY(-50%)
        margin-left 2.3rem
      &__hover
        width 0
        height 0
        margin 0 auto

.copyright
  background-color color-copyright-background
  padding .5rem
  text-align center
  &__text
    color color-text-white
    font-size: 1.4rem
    margin-right 3rem
  &__link:hover
    text-decoration underline



@media screen and (min-width: 544px)
  .footer
    &__follow-me
      height 27rem
  .footer__follow-me__container
    flex-direction row
    width 500px

@media screen and (min-width: 604px)
  .footer__follow-me__container
    width 560px
  .copyright__text
    margin-right 5rem

